fix: Increase h1 contrast to improve accessibility score

--- a/css/stage1-restaurant.css
+++ b/css/stage1-restaurant.css
@@ -18,7 +18,7 @@
 }
 
 h1 {
-  color: #f18200;
+  color: #bf360c;
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
